# student_score_system_in_c_avl_tree

./: .gitignore  CMakeLists.txt  database.c  database.h  linked_list_implementation.cbp  linked_list_implementation.depend  linked_list_implementation.layout  main.c  user_interface.c  user_interface.h
